--- a/Presentacion/Nanoparticles/Nanoparticles.tex
+++ b/Presentacion/Nanoparticles/Nanoparticles.tex
@@ -16,11 +16,11 @@
     \centering
     \begin{tabular}{c}
       \subfloat[Nano part\'iculas \cite{Albe13}]{
-	      \includegraphics[width=5cm]{../Figures/Presentacion/nanoparticles_example.png}
+	      \includegraphics[width=5cm]{Presentacion/nanoparticles_example.png}
 	      \label{P:fg:B2Crystal}}
     \quad
       \subfloat[Nano vidrios \cite{Adibi13}]{
-	      \includegraphics[width=5cm]{../Figures/Presentacion/nanoglass_example.png}
+	      \includegraphics[width=5cm]{Presentacion/nanoglass_example.png}
 	      \label{P:fg:B2CrystalTest}}
     \end{tabular}
     \label{P:fg:B2CuZr_Formation}
@@ -95,9 +95,9 @@
       \begin{figure}[htp]
 	\centering
 	\subfloat[Cristal]{
-	\includegraphics[height=5cm]{../Figures/Cap_4/B2_FreeBoundaries.png}}
+	\includegraphics[height=5cm]{Cap_4/B2_FreeBoundaries.png}}
 	\subfloat[Energ\'ia de cohesi\'on vs tiempo]{
-	\includegraphics[width=6.3cm]{../Figures/Cap_4/B2CrystalTest_FreeBoundariesSphere.pdf}}
+	\includegraphics[width=6.3cm]{Cap_4/B2CrystalTest_FreeBoundariesSphere.pdf}}
       \end{figure}
     \end{textblock*}
     \begin{textblock*}{10cm}(1.5cm,8.5cm) 
@@ -113,7 +113,7 @@
  \begin{textblock*}{12.6cm}(-0.08cm,1.5cm) 
      \begin{figure}[htp]
 	\centering
-	\includegraphics[height=6cm]{../Figures/Cap_4/NP_CloseUp_FCC.png}
+	\includegraphics[height=6cm]{Cap_4/NP_CloseUp_FCC.png}
       \end{figure}
   \end{textblock*}
  
@@ -126,9 +126,9 @@
       \begin{figure}[htp]
 	\centering
 	\subfloat[Bajas Temperaturas]{
-	\includegraphics[width=6.3cm]{../Figures/Cap_4/msd10_400_FCC.png}}
+	\includegraphics[width=6.3cm]{Cap_4/msd10_400_FCC.png}}
 	\subfloat[Altas Temperaturas]{
-	\includegraphics[width=6.3cm]{../Figures/Cap_4/msd500_800_FCC.png}}
+	\includegraphics[width=6.3cm]{Cap_4/msd500_800_FCC.png}}
       \end{figure}
     \end{textblock*}
     \begin{textblock*}{10cm}(1.5cm,8cm) 
@@ -144,9 +144,9 @@
       \begin{figure}[htp]
 	\centering
 	\subfloat[Bajas Temperaturas]{
-	\includegraphics[width=6.3cm]{../Figures/Cap_4/msd10_400_B2.png}}
+	\includegraphics[width=6.3cm]{Cap_4/msd10_400_B2.png}}
 	\subfloat[Altas Temperaturas]{
-	\includegraphics[width=6.3cm]{../Figures/Cap_4/msd500_800_B2.png}}
+	\includegraphics[width=6.3cm]{Cap_4/msd500_800_B2.png}}
       \end{figure}
     \end{textblock*}
     \begin{textblock*}{10cm}(1.5cm,8cm) 
@@ -161,7 +161,7 @@
   \begin{textblock*}{6.5cm}(-0.08cm,2cm) 
    \begin{figure}[htp]
     \centering
-    \includegraphics[width=6.3cm]{../Figures/Cap_4/FCCDiff_vs_temp_fit.png}
+    \includegraphics[width=6.3cm]{Cap_4/FCCDiff_vs_temp_fit.png}
    \end{figure}
   \end{textblock*}
   \begin{textblock*}{10cm}(1.5cm,8cm) 
@@ -197,9 +197,9 @@
       \begin{figure}[htp]
 	\centering
 	\subfloat[Tracci\'on]{
-	\includegraphics[width=6.3cm]{../Figures/Cap_4/stress_strain_tension_FCC_NoInc.png}}
+	\includegraphics[width=6.3cm]{Cap_4/stress_strain_tension_FCC_NoInc.png}}
 	\subfloat[Compresi\'on]{
-	\includegraphics[width=6.3cm]{../Figures/Cap_4/stress_strain_compression_FCC_NoInc.png}}
+	\includegraphics[width=6.3cm]{Cap_4/stress_strain_compression_FCC_NoInc.png}}
       \end{figure}
     \end{textblock*}
     \begin{textblock*}{12cm}(0.5cm,8.5cm) 
@@ -212,9 +212,9 @@
       \begin{figure}[htp]
 	\centering
 	\subfloat[Tracci\'on]{
-	\includegraphics[width=6.3cm]{../Figures/Cap_4/stress_strain_tension_B2_NoInc.png}}
+	\includegraphics[width=6.3cm]{Cap_4/stress_strain_tension_B2_NoInc.png}}
 	\subfloat[Compresi\'on]{
-	\includegraphics[width=6.3cm]{../Figures/Cap_4/stress_strain_compression_B2_NoInc.png}}
+	\includegraphics[width=6.3cm]{Cap_4/stress_strain_compression_B2_NoInc.png}}
       \end{figure}
     \end{textblock*}
     \begin{textblock*}{12cm}(0.5cm,8.5cm) 
