--- a/Presentacion/presentacion.tex
+++ b/Presentacion/presentacion.tex
@@ -1,5 +1,7 @@
 \documentclass[12pt,t]{beamer}
 
+\graphicspath{{../Figures/}}
+
 \usepackage[utf8]{inputenc} 
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
@@ -9,8 +11,13 @@
 \usepackage[absolute,overlay]{textpos}
 \usepackage{epstopdf}
 \usepackage{subfig}
+\usepackage{multirow}
 \usepackage{array}
 \usepackage{tikz}
+
+\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 
 \setbeamertemplate{bibliography item}{\insertbiblabel}
 
@@ -55,7 +62,7 @@
 %\section{Bibliografía}
 %\begin{frame}
 %  \tiny{\bibliographystyle{apalike}}
-%  \bibliography{../Bibliography}
+  \bibliography{../Bibliography}
 %\end{frame}
 
 %%%
