Trabajo en Carac (2)

--- a/Presentacion/Carac/Carac.tex
+++ b/Presentacion/Carac/Carac.tex
@@ -170,3 +170,129 @@
   \end{textblock*}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Muestras}
+  \begin{textblock*}{6cm}(0.5cm,1.5cm)
+    \begin{figure}[htp]
+      \centering
+      \includegraphics[width=6cm]{Cap_3/All_300K_6pstrain_sacale100-280_Trac.png}
+    \end{figure}
+  \end{textblock*}
+  \begin{textblock*}{6cm}(6.5cm,4cm)
+    \begin{figure}[htp]
+      \centering
+      \includegraphics[width=6cm]{Cap_3/All_300K_6pstrain_sacale100-400_Comp.png}
+    \end{figure}
+  \end{textblock*}
+  \begin{textblock*}{4cm}(3cm,6.2cm)
+   \scriptsize{Tracci\'on. $T=300K$. $\epsilon=6\%$}
+  \end{textblock*}
+  \begin{textblock*}{5cm}(8cm,8.5cm)
+   \scriptsize{Compresi\'on. $T=300K$. $\epsilon=6\%$}
+  \end{textblock*}
+  \begin{textblock*}{5cm}(7cm,2.5cm)
+   \centering
+   La escala de colores representa la tensi\'on de Von Mises
+  \end{textblock*}
+  \begin{textblock*}{5cm}(1cm,7.5cm)
+   \centering
+   No se observan bandas de corte
+  \end{textblock*}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Deformaci\'on at\'omica}
+  \begin{textblock*}{4cm}(4.5cm,1.5cm)
+    \begin{figure}[htp]
+      \centering
+      \includegraphics[height=6cm]{Cap_3/ShearBand.png}
+    \end{figure}
+  \end{textblock*}
+  \begin{textblock*}{5cm}(6.5cm,8.5cm)
+   \scriptsize{Compresi\'on. $T=300K$. $\epsilon=14\%$}
+  \end{textblock*}
+  \begin{textblock*}{5cm}(0.5cm,3cm)
+   \centering
+   La escala de colores representa deformaci\'on at\'omica
+  \end{textblock*}
+  \begin{textblock*}{5cm}(0.5cm,5.5cm)
+   \centering
+   Hay bandas de corte incipientes que se forman con una direcci\'on predominantemente diagonal
+  \end{textblock*}
+  
+\end{frame}
+
+\begin{frame}
+  \frametitle{Resultados bajo condiciones libres}
+  
+  \begin{textblock*}{5cm}(0.5cm,1.2cm)
+    \begin{figure}[htp]
+      \centering
+      \includegraphics[width=5cm]{Cap_3/Pseudo_Free_Boundaries_ShearStrain_0_035_300K_20strain.png}
+    \end{figure}
+  \end{textblock*}
+  
+  \only<1>{
+  \begin{textblock*}{5cm}(6.5cm,1.2cm)
+    \begin{figure}[htp]
+      \centering
+      \includegraphics[width=5cm]{Cap_3/Pseudo_Free_Boundaries_ShearStrain_005_046_300K_15strain.png}
+    \end{figure}
+  \end{textblock*}
+  }
+  
+  \begin{textblock*}{4cm}(2.3cm,5.5cm)
+   \scriptsize{Tracci\'on. $T=300K$. $\epsilon=20\%$}
+  \end{textblock*}
+  
+  \only<1>{
+  \begin{textblock*}{4cm}(8.7cm,5.5cm)
+   \centering
+   \scriptsize{Compresi\'on. $T=300K$. $\epsilon=15\%$}
+  \end{textblock*}
+  }
+  
+  \begin{textblock*}{6cm}(0.2cm,6.5cm)
+   \centering
+   Son similares a las de nanoalambres de vidrios met\'alicos vistas en Xiao et al. (2012)\\
+   Hay cambio de la secci\'on transversal en tracci\'on
+  \end{textblock*}
+  
+  \only<1>{
+  \begin{textblock*}{3cm}(6cm,5.5cm)
+    \begin{figure}[htp]
+	\includegraphics[width=1.3cm]{Cap_3/Pseudo_Free_Boundaries_0strain_transversal.png}
+	\includegraphics[width=1.3cm]{Cap_3/Pseudo_Free_Boundaries_20strain_transversal_esquina.png}
+    \end{figure}
+  \end{textblock*}
+  }
+  
+  \only<2>{
+  \begin{textblock*}{2cm}(8.7cm,1.8cm)
+    \begin{figure}[htp]
+	\includegraphics[width=2cm]{Presentacion_Mecom_2012/XiaoNanowire.png}
+    \end{figure}
+  \end{textblock*}
+  
+  \begin{textblock*}{6cm}(6cm,8.2cm)
+    \centering
+    \scriptsize{Xiao Q., Sheng H.W. and Shi Y.. MRS Communications, 2, 13-16 (2012)}
+  \end{textblock*}
+
+  \begin{textblock*}{2cm}(6.7cm,3.1cm)
+    \centering
+    \scriptsize{$1.7\cdot10^{12}K/s$}
+  \end{textblock*}
+  
+  \begin{textblock*}{2cm}(6.7cm,4.9cm)
+    \centering
+    \scriptsize{$1.7\cdot10^{11}K/s$}
+  \end{textblock*}
+  
+  \begin{textblock*}{2cm}(6.7cm,6.8cm)
+    \centering
+    \scriptsize{$1.7\cdot10^{10}K/s$}
+  \end{textblock*}
+  
+  }
+\end{frame}
