--- a/Presentacion/Nanoparticles/Nanoparticles.tex
+++ b/Presentacion/Nanoparticles/Nanoparticles.tex
@@ -3,7 +3,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section[BMG con nanopart\'iculas]{BMG con nanopart\'iculas embebidas}
-%\subsection{BMG con nanopart\'iculas embebidas}
+\subsection{BMG con nanopart\'iculas embebidas}
 
 \begin{frame}
   \frametitle{Introducci\'on}
