--- a/Presentacion/Carac/Carac.tex
+++ b/Presentacion/Carac/Carac.tex
@@ -18,21 +18,21 @@
 
 \begin{frame}
     \frametitle{Detalles de la simulaci\'on}
-    \vspace{0.2cm}
+    \vspace{0.1cm}
     \begin{itemize}
-        \item LAMMPS: Open Source (lammps.sandia.gov).
-        \item Muestra: Cu$_{46}$Zr$_{54}$
+        \item Software: LAMMPS (lammps.sandia.gov) para simulaci\'on, Ovito (www.ovito.org) y Gnuplot para an\'alisis
+        \item Muestra: Cu$_{46}$Zr$_{54}$, descripta por Arman et al., 2010.
         \begin{itemize}
 	  \item 160k \'atomos.
-	  \item Velocidad de enfriamiento de 10$^{12}$K/s (Arman et al., 2010).
+	  \item Velocidad de enfriamiento de 10$^{12}$K/s 
         \end{itemize}
-	\item Velocidad de deformaci\'on: 10$^9$/s (Arman et al., 2010).
-	\item Potencial EAM (embedded atom method) (Daw,1984).
-	\item Condiciones de borde peri\'odicas.
+	\item Velocidad de deformaci\'on: 10$^9$/s.
+	\item Potencial EAM (embedded atom method; Daw,1984) ``alloy'' (Cheng, 2008).
     \end{itemize}
     \begin{textblock*}{12cm}(0.5cm,7.5cm) % {block width} (coords)
         \scriptsize{Arman B., Luo S.-N., Germann T.C. and Cağin T., \textit{Phys. Rev. B.}, \textbf{81}, 144201 (2010).\\
-        Daw M. and Baskes M.I., \textit{Phys. Rev. B.}, \textbf{29}:6443-6453 (1984).}
+        Daw M. and Baskes M.I., \textit{Phys. Rev. B.}, \textbf{29}:6443-6453 (1984).\\
+        Cheng Y.Q., Sheng H.W. and Ma E., \textit{Phys. Rev. B.}, \textbf{78}, 014207 (2008) https://sites.google.com/site/eampotentials/}
     \end{textblock*}
 \end{frame}
 
